input/v1.9.0/users/overview-of-the-users-tab.md
---
title: "Overview of the Users tab"
excerpt: ""
---
[block:callout]
{
  "type": "danger",
  "title": "The Users tab is only available for administrators!"
}
[/block]
The Users tab is composed of two different sub-tabs: Users and Groups.
[block:api-header]
{
  "type": "basic",
  "title": "Users"
}
[/block]
In the Users tab, you can [create](doc:create-a-new-user), [edit](doc:change-the-users-information) and [delete](doc:delete-a-user) a user.

The Users tab displays the list of registered users, including the administrators.

For each registered user, the information below are listed:
* Name: first name and last name
* Email: which is also the ID to login
* Type of user: Administrator or Regular user
* Online status: the dot is empty when the user is disconnected and blue when the user is online
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/kc1yHctZQ82MwB7HIK3e_users-usersoverview.png",
        "users-usersoverview.png",
        "2542",
        "1366",
        "#046cb4",
        ""
      ]
    }
  ]
}
[/block]

[block:api-header]
{
  "type": "basic",
  "title": "Groups"
}
[/block]
In the Groups tab, you can [create groups](doc:create-a-new-group), [add and remove applications](doc:add-remove-an-application), [add and remove groups members](doc:add-remove-a-group-member), and also [delete groups](doc:delete-a-group).

The Groups tab displays the list of users groups, as well as:
* Member count: the number of users in the group
* Applications count: the number of applications available for this group

Groups are intended to manage the users rights to access applications. You can create a pool of applications only available for a given set of users. 
*Example: you can create a group for developers, a group for current users, a group for sales demonstrations and a group for customers or for partners. The possibilities are endless!*
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/oDZyHQxiRL2uLzLK3YNc_users-groupsoverview.png",
        "users-groupsoverview.png",
        "2542",
        "1366",
        "#046cb4",
        ""
      ]
    }
  ]
}
[/block]